[package]
name = "oxide-client"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.0"
chrono = { version = "0.4", features = [ "serde" ] }
futures = "0.3.28"
http = "0.2.9"
progenitor = { git = "https://github.com/oxidecomputer/progenitor", branch = "main" }
rand = "0.8.5"
regress = "0.5.0"
reqwest = { version = "0.11", default-features = false, features = [ "json", "rustls-tls", "stream" ] }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
serde_json = "1.0.96"
tokio = { version = "1.27", features = [ "full" ] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
